--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,5 @@
 // This is a sample stylesheet, if you're going to use it don't forget to import it.
+.blue {
+    font-family: "Courier New", Courier, monospace;
+    color: #2e58ff;
+}
